--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "battlefy",
+  "name": "battlefy-cs-go-stat-tracker",
   "version": "0.0.1",
+  "description": "A CSGO player stat finder",
+  "author": "Thomas Countoures",
   "dependencies": {
     "express": "^4.13.3",
     "node-restful": "^0.2.2",
     "path": "^0.12.7",
-    "requestify": "^0.1.17"
-  },
-  "devDependencies": {
+    "requestify": "^0.1.17",
     "body-parser": "^1.14.1",
+    "mongoose": "^4.2.3"
+  },
+  "devDependencies": {    
     "grunt": "^0.4.5",
     "grunt-contrib-sass": "^0.9.2",
-    "grunt-nodemon": "^0.4.0",
-    "mongoose": "^4.2.3"
+    "grunt-nodemon": "^0.4.0"    
   }
 }
